hphp/hack/test/enum_class/typing/typing2.bad.php.exp
File "typing2.bad.php", line 40, characters 25-28:
Invalid argument (Typing[4110])
  File "typing2.bad.php", line 7, characters 24-29:
  Expected `string`
  File "typing2.bad.php", line 16, characters 24-26:
  But got `int`
